--- a/Math/Math.vcxproj.filters
+++ b/Math/Math.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Frustum.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Halton.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector.cpp">
@@ -47,5 +50,13 @@
     <ClCompile Include="Frustum.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Halton.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Halton.inl">
+      <Filter>头文件</Filter>
+    </None>
   </ItemGroup>
 </Project>
