--- a/Math/Math.vcxproj.filters
+++ b/Math/Math.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="头文件\SkyModel">
+      <UniqueIdentifier>{5a77ba37-e478-461a-99e3-5dcb95cd3484}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\SkyModel">
+      <UniqueIdentifier>{87044c55-7a69-4fc1-a655-011fab20e041}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vector.h">
@@ -42,6 +48,21 @@
     <ClInclude Include="Common.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ArHosekSkyModel.h">
+      <Filter>头文件\SkyModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ArHosekSkyModelData_CIEXYZ.h">
+      <Filter>头文件\SkyModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ArHosekSkyModelData_RGB.h">
+      <Filter>头文件\SkyModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ArHosekSkyModelData_Spectral.h">
+      <Filter>头文件\SkyModel</Filter>
+    </ClInclude>
+    <ClInclude Include="hosek.h">
+      <Filter>头文件\SkyModel</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector.cpp">
@@ -61,6 +82,12 @@
     </ClCompile>
     <ClCompile Include="Spectrum.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="hosek.cc">
+      <Filter>源文件\SkyModel</Filter>
+    </ClCompile>
+    <ClCompile Include="ArHosekSkyModel.cc">
+      <Filter>源文件\SkyModel</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
