--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="MemoryAliasingHelper.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="RngSeedGenerationPass.h" />
+    <ClInclude Include="SkyGenerationPass.h" />
     <ClInclude Include="TerrainOfflineTask.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Resource.h" />
@@ -227,6 +228,7 @@
     <ClCompile Include="MemoryAliasingHelper.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="RngSeedGenerationPass.cpp" />
+    <ClCompile Include="SkyGenerationPass.cpp" />
     <ClCompile Include="TerrainOfflineTask.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="PoolDescriptorAllocator.cpp" />
