--- a/Resources/Resources.vcxproj.filters
+++ b/Resources/Resources.vcxproj.filters
@@ -54,7 +54,7 @@
     <FxCompile Include="Shaders\Engine\Base\Utils.hlsl" />
     <FxCompile Include="Shaders\Engine\ToneMapping\ToneMappingHelper.hlsl" />
     <FxCompile Include="Shaders\Engine\ToneMapping\ToneMappingPass.hlsl" />
-    <FxCompile Include="Shaders\Engine\Base\ColorSpaceHelper.hlsl" />
+    <FxCompile Include="Shaders\Engine\Base\ColorSpaceConversion.hlsl" />
     <FxCompile Include="Shaders\Engine\Base\Exposure.hlsl" />
   </ItemGroup>
 </Project>
