--- a/Math/Math.vcxproj
+++ b/Math/Math.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="Helper.h" />
     <ClInclude Include="hosek.h" />
     <ClInclude Include="HosekWilkieSkyModel.h" />
+    <ClInclude Include="Jitter.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="Spectrum.h" />
@@ -151,6 +152,7 @@
     <ClCompile Include="Halton.cpp" />
     <ClCompile Include="hosek.cc" />
     <ClCompile Include="HosekWilkieSkyModel.cpp" />
+    <ClCompile Include="Jitter.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Quaternion.cpp" />
     <ClCompile Include="Spectrum.cpp" />
