--- a/Math/Math.vcxproj.filters
+++ b/Math/Math.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="HosekWilkieSkyModel.h">
       <Filter>头文件\SkyModel</Filter>
     </ClInclude>
+    <ClInclude Include="Jitter.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector.cpp">
@@ -94,6 +97,9 @@
     </ClCompile>
     <ClCompile Include="HosekWilkieSkyModel.cpp">
       <Filter>源文件\SkyModel</Filter>
+    </ClCompile>
+    <ClCompile Include="Jitter.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
